--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <h1>Weather Dashboard</h1>
+        <h2>Search for a City</h2>
        <input id="search-input"/>
        <button id="search-btn">Search</button>
         
