made more changes to JS to make the 5 day weather forecast

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
        <input id="search-input"/>
        <button id="search-btn">Search</button>
        <div class= "currentWeather"></div>
-
+        <div id= "Weather-img"></div>
          <div class="container">
-        <div class="row">
-          <div class="col order-first">
+        <div id="fiveDay" class="row">
+          <!-- <div class="col order-first">
             <h2>Five Day Forecast</h2>
           </div>
           <div class="col">
@@ -42,7 +42,7 @@
         <div class="col">
             <h2>Five Day Forecast</h2>
             
-        </div>
+        </div> -->
 
         </div>
         
