added a clear button to my HTML and also an event to js

--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
         <h2>Search for a City</h2>
        <input id="search-input"/>
        <button id="search-btn">Search</button>
+       <button id="clear">clear</button>
        <div class= "currentWeather"></div>
         <div id= "Weather-img"></div>
 
         <div id="fiveDay" class="row"></div>
-        
+
        <div>
          <ul id="cityList">
 
